@@ -42,6 +42,7 @@ public:
 	QPixmap pixmap(const Hash& hash) const;
 	QPixmap invalid_pixmap() const;
 	void	add_pixmap(const Hash& hash, const QPixmap& pm);
+	int		cache_size() const;
 
 	bool is_outdated(const Hash& hash) const;
 	void set_cache_size(int cache_size);
