@@ -1,6 +1,8 @@
 == 1.4.1-stable1 ==
 
   * Language: Fixed some runtime tranlation issues
+  * Library: Genre View issue fixed
+  * Library: Artist field in Cover view fixed
 
 == 1.4.0-stable1 ==
 
